--- a/google-glass.html
+++ b/google-glass.html
@@ -33,7 +33,7 @@
     <article id="camera">
         <header>
             <h1>Câmera</h1>
-            <h2>Filme e fotografe a qualquer momento 3</h2>
+            <h2>Filme e fotografe a qualquer momento</h2>
         </header>
         <img src="_imagens/det-camera.jpg" class="img-dir" alt="Camera do Google Glass" />
         <p>Com o Google Glass será possível tirar fotos com até 5 megapixels e gravar vídeos com 720 linhas de
