--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Tudo Sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css" />
+    <link rel="stylesheet" href="_css/form.css" />
 
 </head>
 <script lang="javascript" src="_javascript/funcoes.js">
@@ -18,60 +19,138 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+            <img id="icone" src="_imagens/contato.png">
 
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html">Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="index.html">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')">
+                        <a href="multimidia.html">Multimídia</a>
+                    </li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a
+                            href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
         </header>
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Fale Conosco > Contato </h3>
+                        <h1>Formulário de Contato</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 13/Maio/2021</h3>
+                    </hgroup>
+                </header>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+                <form method="POST" id="fContato" action="mailto:ronnimartins.2@hotmail.com">
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+                    <fieldset id="usuario">
+                        <legend>Identificação do Usuário</legend>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+                        <p><label for="cNome">Nome: </label><input type="text" name="tNome" id="cNome" size="20"
+                                maxlength="30" placeholder="Nome Completo" /></p>
+                        <p><label for="cSenha">Senha: </label><input type="password" name="tSenha" id="cSenha" size="8"
+                                maxlength="8" placeholder="8 dígitos" /></p>
+                        <p><label for="cMail">E-mail: </label><input type="email" name="tMail" id="cMail" size="20"
+                                maxlength="40" placeholder="Digite seu E-mail" /></p>
+                        <fieldset id="sexo">
+                            <legend>Sexo:</legend>
+                            <input type="radio" name="tSexo" id="cMasc" /><label for="cMasc">Masculino</label>
+                            <input type="radio" name="tSexo" id="cFem" /> <label for="cFem">Feminino</label>
+                        </fieldset>
+                        <p><label for="cData">Data de Nascimento: </label><input type="date" name="tData" id="cData" />
+                        </p>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+                    </fieldset>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                    <fieldset id="endereco">
+
+                        <legend>Endereço do Usuário</legend>
+
+                        <p><label for="cRua">Logradouro: </label><input type="text" name="tRua" id="cRua" size="13"
+                            maxlength="80" placeholder="Rua,Trav,Av" /></p>
+                        <p><label for="cNumero">Número: </label><input type="number" name="tNumero" id="cNumero" min="0"
+                            max="9999" /></p>
+
+                        <p><label for="cEst">Estado:</label>
+                        <select name="tEst" id="cEst">
+
+                            <optgroup label="Região Sudeste">
+
+                                <option value="RJ">Rio de Janeiro</option>
+                                <option value="SP">São Paulo</option>
+                                <option value="MG">Minas Gerais</option>
+
+                            </optgroup>
+
+                            <optgroup label="Região Sul">
+
+                                <option value="PR">Paraná</option>
+                                <option value="SC">Santa Catarina</option>
+                                <option value="RS">Rio Grande do Sul</option>
+
+                            </optgroup>
+
+                        </select></p>
+
+                        <p><label for="cCid">Cidade: </label>
+                            <input type="text" name="tCid" id="cCid" size="20" maxlength="40" placeholder="Sua Cidade" list="cidades"/></p>
+
+                            <datalist id="cidades">
+
+                                <option value="Rio de Janeiro"></option>
+                                <option value="Nova Iguaçu"></option>
+                                <option value="Belford Roxo"></option>
+                                <option value="Barra da Tijuca"></option>
+
+                            </datalist>
+
+                    </fieldset>
+
+                    <fieldset id="mensagem">
+
+                        <legend>Mensagem do Usuário</legend>
+
+                        <p><label for="cUrg"> Grau de Urgência: </label>
+                            <input type="text" name="tUrg" id="cUrg" size="20" maxlength="40"/></p>
+
+                        <label for="cMens">Mensagem: </label>
+
+                    </fieldset>
+
+                    <fieldset id="pedido">
+
+                        <legend>Quero um Google Glass</legend>
+
+                        Gostaria de adquirir um Google Glass quando disponível
+                        Cor: Quantidade:
+                        Preço
+                        Total: R$
+
+                        [BOTÃO ENVIAR]
 
 
-[BOTÃO ENVIAR]
+                    </fieldset>
 
-<footer id="rodape">
-    <p>Copyright 2021 - by Ronni Martins <br />
-        <a href="http://www.facebook.com/ronnimartins2" target="_blank">Facebook</a>|
-        <a href="https://twitter.com/ronnimartins1" target="_blank">Twitter</a>
-    </p>
-</footer>
-</div>
+                </form>
+            </article>
+        </section>
+
+
+        <footer id="rodape">
+            <p>Copyright 2021 - by Ronni Martins <br />
+                <a href="http://www.facebook.com/ronnimartins2" target="_blank">Facebook</a>|
+                <a href="https://twitter.com/ronnimartins1" target="_blank">Twitter</a>
+            </p>
+        </footer>
+    </div>
 </body>
 
 </html>
