--- a/multimidia.html
+++ b/multimidia.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Tudo Sobre Google Glass</title>
     <link rel="stylesheet" href="_css/estilo.css" />
+    <link rel="stylesheet" href="_css/media.css" />
 
 </head>
 <script lang="javascript" src="_javascript/funcoes.js">
@@ -18,7 +19,7 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+            <img id="icone" src="_imagens/multimidia.png">
 
             <nav id="menu">
                 <h1>Menu Principal</h1>
@@ -32,24 +33,42 @@
             </nav>
         </header>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+        <section id="corpo-full">
+            <article id="noticia-principal">
+                <header id="cabecalho-artigo">
+                    <hgroup>
+                        <h3>Glass > Multimídia </h3>
+                        <h1>Sons e Vídeos</h1>
+                        <h2>por Gustavo Guanabara</h2>
+                        <h3 class="direita">Atualizado em 13/Maio/2021</h3>
+                    </hgroup>
+                </header>
 
+                <div id="tv-radio">
+                    <audio id="musica" controls="controls">
+                        <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+                        <source src="_media/2009-lovers-carvings-bibio.ogg" type="audio/ogg"/>
 
-Áudio e Vídeo
+                    </audio>
+                    <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
 
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+                        <source src="_media/getting-started.mp4" type="video/mp4"/>
+                        <source src="_media/getting-started.webmsd.webm" type="video/webm"/>
+                        <source src="_media/getting-started.oggtheora.ogv" type="video/ogg"/>
 
-<footer id="rodape">
-    <p>Copyright 2021 - by Ronni Martins <br />
-        <a href="http://www.facebook.com/ronnimartins2" target="_blank">Facebook</a>|
-        <a href="https://twitter.com/ronnimartins1" target="_blank">Twitter</a>
-    </p>
-</footer>
-</div>
+                    </video>
+                </div>
+
+            </article>
+        </section>
+
+        <footer id="rodape">
+            <p>Copyright 2021 - Ronni Martins <br />
+                <a href="http://www.facebook.com/ronnimartins2" target="_blank">Facebook</a>|
+                <a href="https://twitter.com/ronnimartins1" target="_blank">Twitter</a>
+            </p>
+        </footer>
+    </div>
 </body>
 
 </html>
