--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
-
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
@@ -30,6 +28,7 @@
                     <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
         </header>
         <section id="corpo">
             <article id="noticia-principal">
@@ -37,7 +36,7 @@
                     <hgroup>
                         <h3>Tecnologia > &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Inovações</h3>
                         <h1>Saiba tudo sobre o Google Glass</h1>
-                        <h2>por Ronni Martins</h2>
+                        <h2>por Gustavo Guanabara</h2>
                         <h3 class="direita">Atualizado em 23/Abril/2013</h3>
                     </hgroup>
                 </header>
