--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -10,6 +10,13 @@
 </head>
 <script lang="javascript" src="_javascript/funcoes.js">
 </script>
+<script>
+    function calc_total() {
+        var qtd = parseInt(document.getElementById('cQtd').value);
+        tot = qtd * 1500;
+        document.getElementById('cTot').value = tot;
+    }
+</script>
 
 <body>
     <div id="interface">
@@ -19,7 +26,6 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/contato.png">
 
             <nav id="menu">
                 <h1>Menu Principal</h1>
@@ -37,6 +43,7 @@
                             href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
+            <img id="icone" src="_imagens/contato.png">
         </header>
         <section id="corpo-full">
             <article id="noticia-principal">
@@ -49,7 +56,7 @@
                     </hgroup>
                 </header>
 
-                <form method="POST" id="fContato" action="mailto:ronnimartins.2@hotmail.com">
+                <form method="POST" id="fContato" action="mailto:ronnimartins.2@hotmail.com" oninput="calc_total();">
 
                     <fieldset id="usuario">
                         <legend>Identificação do Usuário</legend>
@@ -63,7 +70,7 @@
                         <fieldset id="sexo">
                             <legend>Sexo:</legend>
                             <input type="radio" name="tSexo" id="cMasc" /><label for="cMasc">Masculino</label>
-                            <input type="radio" name="tSexo" id="cFem" /> <label for="cFem">Feminino</label>
+                            <input type="radio" name="tSexo" id="cFem" /><label for="cFem">Feminino</label>
                         </fieldset>
                         <p><label for="cData">Data de Nascimento: </label><input type="date" name="tData" id="cData" />
                         </p>
@@ -75,42 +82,45 @@
                         <legend>Endereço do Usuário</legend>
 
                         <p><label for="cRua">Logradouro: </label><input type="text" name="tRua" id="cRua" size="13"
-                            maxlength="80" placeholder="Rua,Trav,Av" /></p>
+                                maxlength="80" placeholder="Rua,Trav,Av" /></p>
                         <p><label for="cNumero">Número: </label><input type="number" name="tNumero" id="cNumero" min="0"
-                            max="9999" /></p>
+                                max="9999" /></p>
 
                         <p><label for="cEst">Estado:</label>
-                        <select name="tEst" id="cEst">
+                            <select name="tEst" id="cEst">
 
-                            <optgroup label="Região Sudeste">
+                                <optgroup label="Região Sudeste">
 
-                                <option value="RJ">Rio de Janeiro</option>
-                                <option value="SP">São Paulo</option>
-                                <option value="MG">Minas Gerais</option>
+                                    <option value="RJ">Rio de Janeiro</option>
+                                    <option value="SP">São Paulo</option>
+                                    <option value="MG">Minas Gerais</option>
 
-                            </optgroup>
+                                </optgroup>
 
-                            <optgroup label="Região Sul">
+                                <optgroup label="Região Sul">
 
-                                <option value="PR">Paraná</option>
-                                <option value="SC">Santa Catarina</option>
-                                <option value="RS">Rio Grande do Sul</option>
+                                    <option value="PR">Paraná</option>
+                                    <option value="SC">Santa Catarina</option>
+                                    <option value="RS">Rio Grande do Sul</option>
 
-                            </optgroup>
+                                </optgroup>
 
-                        </select></p>
+                            </select>
+                        </p>
 
                         <p><label for="cCid">Cidade: </label>
-                            <input type="text" name="tCid" id="cCid" size="20" maxlength="40" placeholder="Sua Cidade" list="cidades"/></p>
+                            <input type="text" name="tCid" id="cCid" size="20" maxlength="40" placeholder="Sua Cidade"
+                                list="cidades" />
+                        </p>
 
-                            <datalist id="cidades">
+                        <datalist id="cidades">
 
-                                <option value="Rio de Janeiro"></option>
-                                <option value="Nova Iguaçu"></option>
-                                <option value="Belford Roxo"></option>
-                                <option value="Barra da Tijuca"></option>
+                            <option value="Rio de Janeiro"></option>
+                            <option value="Nova Iguaçu"></option>
+                            <option value="Belford Roxo"></option>
+                            <option value="Barra da Tijuca"></option>
 
-                            </datalist>
+                        </datalist>
 
                     </fieldset>
 
@@ -118,10 +128,14 @@
 
                         <legend>Mensagem do Usuário</legend>
 
-                        <p><label for="cUrg"> Grau de Urgência: </label>
-                            <input type="text" name="tUrg" id="cUrg" size="20" maxlength="40"/></p>
+                        <p><label for="cUrg"> Grau de Urgência: </label>Min
+                            <input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2" />Máx
+                        </p>
 
-                        <label for="cMens">Mensagem: </label>
+                        <p><label for="cMsg">Mensagem: </label>
+                            <textarea name="tMsg" id="cMsg" cols="45" rows="5"
+                                placeholder="Digite aqui sua mensagem"></textarea>
+                        </p>
 
                     </fieldset>
 
@@ -129,16 +143,21 @@
 
                         <legend>Quero um Google Glass</legend>
 
-                        Gostaria de adquirir um Google Glass quando disponível
-                        Cor: Quantidade:
-                        Preço
-                        Total: R$
-
-                        [BOTÃO ENVIAR]
-
+                        <p><input type="checkbox" name="tPed" id="cPed" checked />
+                            <label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label>
+                        </p>
+                        <p><label for="cCor">Cor: </label>
+                            <input type="color" name="tCor" id="tCor" value="#0000FF" />
+                        </p>
+                        <p><label for="cQtd">Quantidade: </label>
+                            <input type="number" name="tQtd" id="cQtd" min="0" max="5" value="0" />
+                        </p>
+                        <p><label for="cTot">Preço Total: R$ </label>
+                            <input type="text" name="tTot" id="cTot" placeholder="Total a pagar" readonly />
+                        </p>
 
                     </fieldset>
-
+                    <input type="image" src="_imagens/botao-enviar.png" name="tEnviar" />
                 </form>
             </article>
         </section>
