--- a/fotos.html
+++ b/fotos.html
@@ -19,18 +19,22 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
-
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html">Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="multimidia.html">Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+                            href="index.html">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/fotos.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+                            href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+                            href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a
+                            href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
         </header>
         <section id="corpo-full">
             <article id="noticia-principal">
@@ -38,12 +42,14 @@
                     <hgroup>
                         <h3>Glass > Fotos </h3>
                         <h1>Galeria de Imagens do Google Glass</h1>
-                        <h2>por Ronni Martins</h2>
+                        <h2>por Gustavo Guanabara</h2>
                         <h3 class="direita">Atualizado em 13/Maio/2021</h3>
                     </hgroup>
                 </header>
 
-                <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para
+                <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais
+                    características do Google Glass, como recursos e propriedades que estão impressionando o mundo
+                    inteiro. Basta passar o mouse sobre uma das fotos para
                     ver uma versão ampliada e com uma breve descrição.</p>
                 <ul id="album-fotos">
                     <li id="foto01"><span>Agenda e lembretes</span></li>
