--- a/multimidia.html
+++ b/multimidia.html
@@ -19,18 +19,22 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/multimidia.png">
-
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
-                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html">Home</a></li>
-                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
-                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html">Fotos</a></li>
-                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+                            href="index.html">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')"
+                        onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a
+                            href="fotos.html">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')"
+                        onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')">
+                        <a href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
+            <img id="icone" src="_imagens/multimidia.png">
         </header>
 
         <section id="corpo-full">
@@ -46,15 +50,15 @@
 
                 <div id="tv-radio">
                     <audio id="musica" controls="controls">
-                        <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
-                        <source src="_media/2009-lovers-carvings-bibio.ogg" type="audio/ogg"/>
+                        <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg" />
+                        <source src="_media/2009-lovers-carvings-bibio.ogg" type="audio/ogg" />
 
                     </audio>
                     <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
 
-                        <source src="_media/getting-started.mp4" type="video/mp4"/>
-                        <source src="_media/getting-started.webmsd.webm" type="video/webm"/>
-                        <source src="_media/getting-started.oggtheora.ogv" type="video/ogg"/>
+                        <source src="_media/getting-started.mp4" type="video/mp4" />
+                        <source src="_media/getting-started.webmsd.webm" type="video/webm" />
+                        <source src="_media/getting-started.oggtheora.ogv" type="video/ogg" />
 
                     </video>
                 </div>
