--- a/specs.html
+++ b/specs.html
@@ -22,8 +22,6 @@
                 <h2>A revolução do Google está chegando</h2>
             </hgroup>
 
-            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
-
             <nav id="menu">
                 <h1>Menu Principal</h1>
                 <ul>
@@ -42,6 +40,7 @@
                             conosco</a></li>
                 </ul>
             </nav>
+            <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
         </header>
 
         <section id="corpo-full">
@@ -50,7 +49,7 @@
                     <hgroup>
                         <h3>Glass > Especificações </h3>
                         <h1>Raio-X no Google Glass</h1>
-                        <h2>por Ronni Martins</h2>
+                        <h2>por Gustavo Guanabara</h2>
                         <h3 class="direita">Atualizado em 13/Maio/2021</h3>
                     </hgroup>
                 </header>
@@ -60,7 +59,7 @@
                     Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
                 <section id="conteudo">
-                    <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa"/>
+                    <img src="_imagens/glass-esquema-marcado.jpg" usemap="#meumapa" />
                     <map name="meumapa">
                         <area shape="rect" coords="179,202,270,260" href="google-glass.html#tela" target="janela" />
                         <area shape="circle" coords="158,243,12" href="google-glass.html#camera" target="janela" />
