finalizando um novo botao

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -157,7 +157,8 @@
                         </p>
 
                     </fieldset>
-                    <input type="image" src="_imagens/botao-enviar.png" name="tEnviar" />
+                    <button class="botao">Enviar</button>
+                    <!-- <input type="image" src="_imagens/botao-enviar.png" name="tEnviar" /> -->
                 </form>
             </article>
         </section>
